mostly fixed the issues now, still header and general content alignment to sort

--- a/tests/test_dashboard/www/custom-dfeshiny.css
+++ b/tests/test_dashboard/www/custom-dfeshiny.css
@@ -1,24 +1,27 @@
-/*
-
 .govuk-width-container {
   max-width: 100%;
 }
 
-.govuk-header__container {
-  margin-right: 0;
-  margin-left: 0;
-  padding-right: 0;
-  padding-left: 0;
+
+
+.tab-content {
+  margin-right: 15px;
+}
+
+.container-fluid {
+  --bs-gutter-x: 0;
+}
+
+.govuk-cookie-banner {
+  padding-top: 0;
+  border-bottom: 0;
 }
 
 .dfeshiny-cookie-banner {
- padding: 0;
- margin: 0;
-}
-
-#navlistPanel {
   margin-right: 0;
   margin-left: 0;
 }
 
-*/
+.govuk-cookie-banner__heading {
+  padding-top: 10px;
+}
